--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
+    "jed": "^1.1.1",
+    "jqplot": "github:jqplot/jqplot#d96a669fbb729f4f51e2214688e54320411219af",
     "jquery": "^3.2.1",
     "jquery-migrate": "^3.0.1",
     "moment": "^2.19.1",
@@ -20,6 +22,8 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.7",
+    "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
     "webpack-manifest-plugin": "^1.3.2"
   },
