Move qTip2 to webpack

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.2.1",
     "jquery-migrate": "^3.0.1",
     "moment": "^2.19.1",
+    "qtip2": "^3.0.3",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
