Change ESLint config to support ES6

--- a/.eslintignore
+++ b/.eslintignore
@@ -9,4 +9,5 @@ indico/htdocs/js/indico/Management/
 indico/htdocs/js/indico/RoomBooking/
 indico/htdocs/js/indico/angular/
 indico/htdocs/js/indico/modules/timetable/timetable/*.js
+indico/web/client/js/jquery/contrib/*.js
 indico/web/templates/assets/*.js
