--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,6 +4,10 @@ env:
 
 extends: 'eslint:recommended'
 
+parserOptions:
+  ecmaVersion: 6
+  sourceType: module
+
 rules:
   indent:
     - error
@@ -120,3 +124,4 @@ globals:
   ajaxDialog: false
   cornerMessage: false
   enableIfChecked: false
+  global: false
