--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery.typewatch": "github:dennyferra/typewatch#3.0.0",
     "moment": "^2.19.1",
     "qtip2": "^3.0.3",
+    "rrule": "^2.2.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.7",
+    "script-loader": "^0.7.2",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
     "webpack-manifest-plugin": "^1.3.2"
