--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "doc": "docs"
   },
   "dependencies": {
+    "AngularJS": "github:indico/angular.js#indico",
+    "angular-ui-sortable": "github:angular-ui/ui-sortable#6b79634f0921f3b5ac7b3989bd0f59376d7d765b",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "chartist": "^0.11.0",
