--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jqplot": "github:jqplot/jqplot#d96a669fbb729f4f51e2214688e54320411219af",
     "jquery": "^3.2.1",
     "jquery-migrate": "^3.0.1",
+    "jquery-typeahead": "^2.10.4",
     "jquery.typewatch": "github:dennyferra/typewatch#3.0.0",
     "moment": "^2.19.1",
     "qtip2": "^3.0.3",
