--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.19.1",
     "qtip2": "^3.0.3",
     "rrule": "^2.2.0",
+    "selectize": "^0.12.4",
     "taggle": "^1.12.0",
     "underscore": "^1.8.3"
   },
