Move outdated-browser to webpack

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jquery-typeahead": "^2.10.4",
     "jquery.typewatch": "github:dennyferra/typewatch#3.0.0",
     "moment": "^2.19.1",
+    "outdatedbrowser": "^1.0.2",
     "qtip2": "^3.0.3",
     "rrule": "^2.2.0",
     "selectize": "^0.12.4",
@@ -36,6 +37,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.7",
+    "exports-loader": "^0.6.4",
     "script-loader": "^0.7.2",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
