--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery": "^3.2.1",
     "jquery-migrate": "^3.0.1",
     "jquery-typeahead": "^2.10.0",
+    "jquery-ui": "^1.12.1",
     "jquery-ui-multiselect-widget": "^2.0.1",
     "jquery.typewatch": "github:dennyferra/typewatch#3.0.0",
     "moment": "^2.19.1",
@@ -47,7 +48,8 @@
   },
   "scripts": {
     "watch": "webpack --watch",
-    "build": "webpack"
+    "build": "webpack",
+    "postinstall": "patch -p0 -d node_modules/jquery-ui < indico/web/client/js/jquery/contrib/jquery-ui-changes.diff"
   },
   "repository": {
     "type": "git",
