Move Markdown and Mathjax to Webpack

--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "jquery-ui": "^1.12.1",
     "jquery-ui-multiselect-widget": "^2.0.1",
     "jquery.typewatch": "github:dennyferra/typewatch#3.0.0",
+    "mathjax": "^2.7.2",
     "moment": "^2.19.1",
     "outdatedbrowser": "^1.0.2",
+    "pagedown": "^1.1.0",
+    "pagedown-editor": "0.0.10",
     "qtip2": "^3.0.3",
     "rrule": "^2.2.0",
     "selectize": "^0.12.4",
@@ -39,6 +42,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
+    "copy-webpack-plugin": "^4.2.3",
     "css-loader": "^0.28.7",
     "exports-loader": "^0.6.4",
     "script-loader": "^0.7.2",
