--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "qtip2": "^3.0.3",
     "rrule": "^2.2.0",
     "selectize": "^0.12.4",
+    "tablesorter": "^2.29.0",
     "taggle": "^1.12.0",
     "underscore": "^1.8.3"
   },
