Add minification to production build

--- a/.babelrc
+++ b/.babelrc
@@ -6,5 +6,10 @@
       }
     }]
   ],
-  "plugins": ["transform-runtime"]
+  "plugins": ["transform-runtime"],
+  "env": {
+    "production": {
+      "presets": ["minify"]
+    }
+  }
 }
