--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-minify": "^0.2.0",
     "copy-webpack-plugin": "^4.2.3",
     "css-loader": "^0.28.7",
     "exports-loader": "^0.6.4",
