--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "selectize": "^0.12.4",
     "tablesorter": "^2.29.0",
     "taggle": "^1.12.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "vanderlee-colorpicker": "^1.2.13"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
