Rename indico-weeks-view in order to be consistent

--- a/indico/modules/events/themes.yaml
+++ b/indico/modules/events/themes.yaml
@@ -41,7 +41,7 @@ definitions:
     title: Compact style
     user_visible: true
 
-  indico-weeks-view:
+  indico_weeks_view:
     event_types: [conference, meeting]
     stylesheet: weeks.scss
     template: weeks.html
