--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "node-sass": "^4.7.1",
     "postcss-loader": "^2.0.8",
     "postcss-scss": "^1.0.2",
+    "progress-bar-webpack-plugin": "^1.10.0",
     "sass-loader": "^6.0.6",
     "script-loader": "^0.7.2",
     "style-loader": "^0.19.0",
