--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "babel-preset-minify": "^0.2.0",
     "copy-webpack-plugin": "^4.2.3",
     "css-loader": "^0.28.7",
+    "eslint": "^4.12.1",
+    "eslint-cli": "^1.1.1",
     "exports-loader": "^0.6.4",
     "node-glob": "^1.2.0",
     "node-sass": "^4.7.1",
@@ -68,7 +70,8 @@
     "watch": "webpack --watch",
     "build": "webpack -p --env.NODE_ENV=production",
     "profile": "webpack --profile --json -p --env.NODE_ENV=production > webpack-stats.json",
-    "postinstall": "patch -p0 -d node_modules/jquery-ui < indico/web/client/js/jquery/contrib/jquery-ui-changes.diff"
+    "postinstall": "patch -p0 -d node_modules/jquery-ui < indico/web/client/js/jquery/contrib/jquery-ui-changes.diff",
+    "eslint": "eslint ./indico"
   },
   "repository": {
     "type": "git",
