Ignore some conflicting pydocstyle errors

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ exclude = .git,build,dist,ext_modules,node_modules,indico.egg-info
 max-line-length = 120
 
 [pep257]
-ignore = D100
+ignore = D100,D203,D105,D213
 
 [pycodestyle]
 exclude = .git,build,dist,ext_modules,node_modules,indico.egg-info,__pycache__,docs,htmlcov
