--- a/package.json
+++ b/package.json
@@ -58,13 +58,13 @@
     "node-glob": "^1.2.0",
     "node-sass": "^4.7.1",
     "postcss-loader": "^2.0.8",
-    "postcss-scss": "^1.0.2",
     "progress-bar-webpack-plugin": "^1.10.0",
     "sass-loader": "^6.0.6",
     "script-loader": "^0.7.2",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
-    "webpack-manifest-plugin": "^1.3.2"
+    "webpack-manifest-plugin": "^1.3.2",
+    "webpack-merge": "^4.1.1"
   },
   "scripts": {
     "watch": "webpack --watch",
