--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "ckeditor": "github:indico/indico-ckeditor#build-4.7.3",
     "clipboard": "^1.7.1",
     "dropzone": "^5.2.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
     "fullcalendar": "^3.7.0",
     "jed": "^1.1.1",
     "jqplot": "github:jqplot/jqplot#d96a669fbb729f4f51e2214688e54320411219af",
@@ -54,10 +52,13 @@
     "css-loader": "^0.28.7",
     "eslint": "^4.12.1",
     "eslint-cli": "^1.1.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
     "exports-loader": "^0.6.4",
     "node-glob": "^1.2.0",
     "node-sass": "^4.7.1",
     "postcss-loader": "^2.0.8",
+    "postcss-url-namespaces": "github:pferreir/postcss-url-namespaces",
     "progress-bar-webpack-plugin": "^1.10.0",
     "sass-loader": "^6.0.6",
     "script-loader": "^0.7.2",
