--- a/package.json
+++ b/package.json
@@ -52,11 +52,12 @@
     "css-loader": "^0.28.7",
     "eslint": "^4.12.1",
     "eslint-cli": "^1.1.1",
+    "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
-    "exports-loader": "^0.6.4",
     "node-glob": "^1.2.0",
     "node-sass": "^4.7.1",
+    "node-sass-import-once": "^1.2.0",
     "postcss-loader": "^2.0.8",
     "postcss-url-namespaces": "github:pferreir/postcss-url-namespaces",
     "progress-bar-webpack-plugin": "^1.10.0",
