--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "doc": "docs"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0-beta.40",
+    "@babel/register": "^7.0.0-beta.40",
+    "@babel/runtime": "^7.0.0-beta.40",
     "AngularJS": "github:indico/angular.js#indico",
     "angular-ui-sortable": "github:angular-ui/ui-sortable#6b79634f0921f3b5ac7b3989bd0f59376d7d765b",
-    "babel-polyfill": "^6.26.0",
-    "babel-runtime": "^6.26.0",
     "chartist": "^0.11.0",
     "ckeditor": "github:indico/indico-ckeditor#build-4.7.3",
     "clipboard": "^1.7.1",
@@ -41,19 +42,18 @@
     "vanderlee-colorpicker": "^1.2.13"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.40",
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.40",
+    "@babel/preset-env": "^7.0.0-beta.40",
     "autoprefixer": "^7.1.6",
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-minify": "^0.2.0",
-    "copy-webpack-plugin": "^4.2.3",
+    "babel-loader": "^8.0.0-beta.2",
+    "copy-webpack-plugin": "^4.4.2",
     "css-loader": "^0.28.7",
     "eslint": "^4.12.1",
     "eslint-cli": "^1.1.1",
     "exports-loader": "^0.6.4",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "file-loader": "^1.1.5",
     "node-glob": "^1.2.0",
     "node-sass": "^4.7.1",
@@ -63,9 +63,11 @@
     "progress-bar-webpack-plugin": "^1.10.0",
     "sass-loader": "^6.0.6",
     "script-loader": "^0.7.2",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
-    "webpack-manifest-plugin": "^1.3.2",
+    "style-loader": "^0.20.2",
+    "uglify-js": "^3.3.12",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^2.0.9",
+    "webpack-manifest-plugin": "^2.0.0-rc.2",
     "webpack-merge": "^4.1.1"
   },
   "scripts": {
