--- a/babel.cfg
+++ b/babel.cfg
@@ -6,10 +6,10 @@ encoding = utf-8
 
 [jinja2: **/templates/**.txt]
 encoding = utf-8
-extensions=jinja2.ext.autoescape,jinja2.ext.with_,webassets.ext.jinja2.AssetsExtension
+extensions=jinja2.ext.autoescape,jinja2.ext.with_
 trimmed = true
 
 [jinja2: **/templates/**.html]
 encoding = utf-8
-extensions=jinja2.ext.autoescape,jinja2.ext.with_,webassets.ext.jinja2.AssetsExtension
+extensions=jinja2.ext.autoescape,jinja2.ext.with_
 trimmed = true
