Enable object spread support

--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,7 @@
       }
     }]
   ],
-  "plugins": ["@babel/plugin-transform-runtime"],
+  "plugins": ["@babel/plugin-transform-runtime", "@babel/plugin-proposal-object-rest-spread"],
   "env": {
     "production": {
       "presets": ["minify"]
