--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -7,6 +7,8 @@ extends: 'eslint:recommended'
 
 parserOptions:
   sourceType: module
+  ecmaFeatures:
+    experimentalObjectRestSpread: true
 
 rules:
   indent:
