--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -86,7 +86,7 @@ rules:
   prefer-numeric-literals: error
   prefer-rest-params: error
   prefer-spread: error
-  prefer-template: error
+  prefer-template: warn
   radix: error
   require-yield: error
   rest-spread-spacing: error
