Add react, react-dom and jsx files support

--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "pagedown": "^1.1.0",
     "pagedown-editor": "0.0.10",
     "qtip2": "^3.0.3",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "rrule": "^2.2.0",
     "selectize": "^0.12.4",
     "tablesorter": "^2.29.0",
@@ -49,6 +51,7 @@
     "@babel/preset-env": "^7.0.0-beta.40",
     "autoprefixer": "^7.1.6",
     "babel-loader": "^8.0.0-beta.2",
+    "babel-preset-react": "^7.0.0-beta.3",
     "copy-webpack-plugin": "^4.4.2",
     "css-loader": "^0.28.7",
     "eslint": "^4.12.1",
