Basic integration with redux

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "qtip2": "^3.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
     "rrule": "^2.2.0",
     "selectize": "^0.12.4",
     "tablesorter": "^2.29.0",
