--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,7 +3,9 @@ env:
   jquery: true
   es6: true
 
-extends: 'eslint:recommended'
+extends:
+  - 'eslint:recommended'
+  - 'plugin:react/recommended'
 
 parserOptions:
   sourceType: module
