--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "css-loader": "^0.28.7",
     "eslint": "^4.12.1",
     "eslint-cli": "^1.1.1",
+    "eslint-plugin-react": "^7.7.0",
     "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "file-loader": "^1.1.5",
