Update JS dependencies

--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "doc": "docs"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.40",
-    "@babel/register": "^7.0.0-beta.40",
-    "@babel/runtime": "^7.0.0-beta.40",
+    "@babel/polyfill": "^7.0.0-beta.41",
+    "@babel/register": "^7.0.0-beta.41",
+    "@babel/runtime": "^7.0.0-beta.41",
     "AngularJS": "github:indico/angular.js#indico",
     "angular-ui-sortable": "github:angular-ui/ui-sortable#6b79634f0921f3b5ac7b3989bd0f59376d7d765b",
     "chartist": "^0.11.0",
     "ckeditor": "github:indico/indico-ckeditor#build-4.7.3",
     "clipboard": "^1.7.1",
-    "dropzone": "^5.2.0",
-    "fullcalendar": "^3.7.0",
+    "dropzone": "^5.4.0",
+    "fullcalendar": "^3.9.0",
     "jed": "^1.1.1",
     "jqplot": "github:jqplot/jqplot#d96a669fbb729f4f51e2214688e54320411219af",
     "jquery": "^3.2.1",
@@ -25,11 +25,11 @@
     "jquery-migrate": "^3.0.1",
     "jquery-typeahead": "^2.10.0",
     "jquery-ui": "^1.12.1",
-    "jquery-ui-multiselect-widget": "^2.0.1",
+    "jquery-ui-multiselect-widget": "^2.0.2",
     "jquery.typewatch": "github:dennyferra/typewatch#3.0.0",
     "jstorage": "github:andris9/jStorage#c0285fa354a5060b97f5d7c4d03bf37841eee67e",
     "mathjax": "^2.7.2",
-    "moment": "^2.19.1",
+    "moment": "^2.21.0",
     "outdatedbrowser": "^1.0.2",
     "pagedown": "^1.1.0",
     "pagedown-editor": "0.0.10",
@@ -44,34 +44,34 @@
     "vanderlee-colorpicker": "^1.2.13"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.40",
-    "@babel/core": "^7.0.0-beta.40",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.40",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.40",
-    "@babel/preset-env": "^7.0.0-beta.40",
+    "@babel/cli": "^7.0.0-beta.41",
+    "@babel/core": "^7.0.0-beta.41",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.41",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.41",
+    "@babel/preset-env": "^7.0.0-beta.41",
+    "@babel/preset-react": "^7.0.0-beta.41",
     "autoprefixer": "^7.1.6",
     "babel-loader": "^8.0.0-beta.2",
-    "babel-preset-react": "^7.0.0-beta.3",
-    "copy-webpack-plugin": "^4.4.2",
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.7",
-    "eslint": "^4.12.1",
+    "eslint": "^4.18.2",
     "eslint-cli": "^1.1.1",
     "eslint-plugin-react": "^7.7.0",
     "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
-    "file-loader": "^1.1.5",
+    "file-loader": "^1.1.11",
     "node-glob": "^1.2.0",
-    "node-sass": "^4.7.1",
+    "node-sass": "^4.8.2",
     "node-sass-import-once": "^1.2.0",
     "postcss-loader": "^2.0.8",
     "postcss-url-namespaces": "github:pferreir/postcss-url-namespaces",
     "progress-bar-webpack-plugin": "^1.10.0",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^6.0.7",
     "script-loader": "^0.7.2",
-    "style-loader": "^0.20.2",
-    "uglify-js": "^3.3.12",
-    "webpack": "^4.0.0",
-    "webpack-cli": "^2.0.9",
+    "style-loader": "^0.20.3",
+    "uglify-js": "^3.3.15",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.12",
     "webpack-manifest-plugin": "^2.0.0-rc.2",
     "webpack-merge": "^4.1.1"
   },
