--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chartist": "^0.11.0",
     "ckeditor": "github:indico/indico-ckeditor#build-4.7.3",
     "clipboard": "^1.7.1",
+    "cross-fetch": "^2.1.0",
     "dropzone": "^5.4.0",
     "fullcalendar": "^3.9.0",
     "jed": "^1.1.1",
@@ -44,8 +45,7 @@
     "tablesorter": "^2.29.0",
     "taggle": "^1.12.0",
     "underscore": "^1.8.3",
-    "vanderlee-colorpicker": "^1.2.13",
-    "whatwg-fetch": "^2.0.3"
+    "vanderlee-colorpicker": "^1.2.13"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.41",
