Enable class properties and use babel-eslint
This supports anything babel supports, including <>...</> fragments.

--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,11 @@
       }
     }]
   ],
-  "plugins": ["@babel/plugin-transform-runtime", "@babel/plugin-proposal-object-rest-spread"],
+  "plugins": [
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-proposal-class-properties"
+  ],
   "env": {
     "production": {
       "presets": ["minify"]
