--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ insert_final_newline=true
 [{*.yml,*.yaml}]
 indent_size=2
 
-[package.json]
+[{package.json,.babelrc}]
 indent_size=2
 
 [Makefile]
