--- a/package.json
+++ b/package.json
@@ -50,16 +50,19 @@
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.41",
     "@babel/core": "^7.0.0-beta.41",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.42",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.41",
     "@babel/plugin-transform-runtime": "^7.0.0-beta.41",
     "@babel/preset-env": "^7.0.0-beta.41",
     "@babel/preset-react": "^7.0.0-beta.41",
     "autoprefixer": "^7.1.6",
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0-beta.2",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.7",
     "eslint": "^4.18.2",
     "eslint-cli": "^1.1.1",
+    "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-react": "^7.7.0",
     "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
