Fix react/jsx-wrap-multilines config + violations

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -227,7 +227,15 @@ rules:
       beforeClosing: never
   react/jsx-uses-react: error
   react/jsx-uses-vars: error
-  react/jsx-wrap-multilines: error
+  react/jsx-wrap-multilines:
+    - error
+    - declaration: parens-new-line
+      assignment: parens-new-line
+      return: parens-new-line
+      arrow: parens-new-line
+      condition: parens-new-line
+      logical: parens-new-line
+      prop: ignore
   react/no-children-prop: error
   react/no-danger-with-children: error
   react/no-deprecated: error
