Add new 'Modal' react component

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "qtip2": "^3.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-modal": "^3.3.2",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
