--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "tablesorter": "^2.29.0",
     "taggle": "^1.12.0",
     "underscore": "^1.8.3",
+    "url-polyfill": "^1.0.11",
     "vanderlee-colorpicker": "^1.2.13"
   },
   "devDependencies": {
