--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@babel/runtime": "^7.0.0-beta.41",
     "AngularJS": "github:indico/angular.js#indico",
     "angular-ui-sortable": "github:angular-ui/ui-sortable#6b79634f0921f3b5ac7b3989bd0f59376d7d765b",
+    "axios": "^0.18.0",
     "chartist": "^0.11.0",
     "ckeditor": "github:indico/indico-ckeditor#build-4.7.3",
     "clipboard": "^1.7.1",
-    "cross-fetch": "^2.1.0",
     "dropzone": "^5.4.0",
     "fullcalendar": "^3.9.0",
     "jed": "^1.1.1",
@@ -34,6 +34,7 @@
     "outdatedbrowser": "^1.0.2",
     "pagedown": "^1.1.0",
     "pagedown-editor": "0.0.10",
+    "qs": "^6.5.1",
     "qtip2": "^3.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -48,7 +49,6 @@
     "tablesorter": "^2.29.0",
     "taggle": "^1.12.0",
     "underscore": "^1.8.3",
-    "url-polyfill": "^1.0.11",
     "vanderlee-colorpicker": "^1.2.13"
   },
   "devDependencies": {
