Add allowParens to no-confusing-arrow rule

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -143,7 +143,9 @@ rules:
   no-array-constructor: error
   no-bitwise: warn
   no-class-assign: error
-  no-confusing-arrow: error
+  no-confusing-arrow:
+    - error
+    - allowParens: true
   no-const-assign: error
   no-dupe-class-members: error
   no-duplicate-imports: error
