--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -255,9 +255,8 @@ rules:
   react/no-direct-mutation-state: error
   react/no-find-dom-node: error
   react/no-is-mounted: error
-  react/no-multi-comp:
-    - warn
-    - ignoreStateless: true
+  # XXX: there is currently no way to only check for exported components (see yannickcr/eslint-plugin-react#365)
+  react/no-multi-comp: off
   react/no-redundant-should-component-update: error
   react/no-render-return-value: error
   react/no-string-refs: error
