--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@babel/runtime": "^7.0.0-beta.44",
     "AngularJS": "github:indico/angular.js#indico",
     "angular-ui-sortable": "github:angular-ui/ui-sortable#6b79634f0921f3b5ac7b3989bd0f59376d7d765b",
+    "antd": "^3.4.0",
     "axios": "^0.18.0",
+    "babel-plugin-import": "^1.7.0",
     "chartist": "^0.11.0",
     "ckeditor": "github:indico/indico-ckeditor#build-4.7.3",
     "clipboard": "^2.0.0",
