--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^3.4.0",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.7.0",
+    "babel-plugin-react-css-modules": "^3.3.3",
     "chartist": "^0.11.0",
     "ckeditor": "github:indico/indico-ckeditor#build-4.7.3",
     "clipboard": "^2.0.0",
@@ -36,6 +37,7 @@
     "outdatedbrowser": "^1.0.2",
     "pagedown": "^1.1.0",
     "pagedown-editor": "0.0.10",
+    "postcss-scss": "^1.0.5",
     "qs": "^6.5.1",
     "qtip2": "^3.0.3",
     "react": "^16.3.1",
