--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "eslint-cli": "^1.1.1",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "github:ThiefMaster/eslint-plugin-react#jsx-props",
     "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "file-loader": "^1.1.11",
