--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery-ui-multiselect-widget": "^2.0.2",
     "jquery.typewatch": "github:dennyferra/typewatch#3.0.0",
     "jstorage": "github:andris9/jStorage#c0285fa354a5060b97f5d7c4d03bf37841eee67e",
+    "leaflet": "^1.3.1",
     "mathjax": "^2.7.4",
     "moment": "^2.22.0",
     "outdatedbrowser": "^1.0.2",
@@ -43,6 +44,7 @@
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-jsx-i18n": ">=0.0.3",
+    "react-leaflet": "^1.9.1",
     "react-modal": "^3.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
