Use external packages for js link generation

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ckeditor": "github:indico/indico-ckeditor#build-4.7.3",
     "clipboard": "^1.7.1",
     "dropzone": "^5.4.0",
+    "flask-urls": "*",
     "fullcalendar": "^3.9.0",
     "jed": "^1.1.1",
     "jqplot": "github:jqplot/jqplot#d96a669fbb729f4f51e2214688e54320411219af",
@@ -63,6 +64,7 @@
     "autoprefixer": "^7.1.6",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0-beta.2",
+    "babel-plugin-flask-urls": "*",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.7",
     "eslint": "^4.18.2",
