Update JS dependencies

--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "doc": "docs"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.41",
-    "@babel/register": "^7.0.0-beta.41",
-    "@babel/runtime": "^7.0.0-beta.41",
+    "@babel/polyfill": "^7.0.0-beta.44",
+    "@babel/runtime": "^7.0.0-beta.44",
     "AngularJS": "github:indico/angular.js#indico",
     "angular-ui-sortable": "github:angular-ui/ui-sortable#6b79634f0921f3b5ac7b3989bd0f59376d7d765b",
     "axios": "^0.18.0",
@@ -37,8 +36,8 @@
     "pagedown-editor": "0.0.10",
     "qs": "^6.5.1",
     "qtip2": "^3.0.3",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
     "react-jsx-i18n": "*",
     "react-modal": "^3.3.2",
     "react-redux": "^5.0.7",
@@ -54,40 +53,41 @@
     "vanderlee-colorpicker": "^1.2.13"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.41",
-    "@babel/core": "^7.0.0-beta.41",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.42",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.41",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.41",
-    "@babel/preset-env": "^7.0.0-beta.41",
-    "@babel/preset-react": "^7.0.0-beta.41",
-    "autoprefixer": "^7.1.6",
+    "@babel/cli": "^7.0.0-beta.44",
+    "@babel/core": "^7.0.0-beta.44",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.44",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.44",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.44",
+    "@babel/preset-env": "^7.0.0-beta.44",
+    "@babel/preset-react": "^7.0.0-beta.44",
+    "@babel/register": "^7.0.0-beta.44",
+    "autoprefixer": "^7.2.6",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0-beta.2",
     "babel-plugin-flask-urls": "*",
     "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.18.2",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
     "eslint-cli": "^1.1.1",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-babel": "^5.0.0",
+    "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-react": "github:ThiefMaster/eslint-plugin-react#jsx-props",
-    "exports-loader": "^0.6.4",
+    "exports-loader": "^0.7.0",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "file-loader": "^1.1.11",
     "node-glob": "^1.2.0",
-    "node-sass": "^4.8.2",
+    "node-sass": "^4.8.3",
     "node-sass-import-once": "^1.2.0",
-    "postcss-loader": "^2.0.8",
+    "postcss-loader": "^2.1.3",
     "postcss-url-namespaces": "github:pferreir/postcss-url-namespaces",
     "progress-bar-webpack-plugin": "^1.10.0",
     "sass-loader": "^6.0.7",
     "script-loader": "^0.7.2",
     "style-loader": "^0.20.3",
-    "uglify-js": "^3.3.15",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.12",
-    "webpack-manifest-plugin": "^2.0.0-rc.2",
+    "uglify-js": "^3.3.21",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-manifest-plugin": "^2.0.0",
     "webpack-merge": "^4.1.1"
   },
   "scripts": {
