--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "eslint": "^4.19.1",
     "eslint-cli": "^1.1.1",
     "eslint-plugin-babel": "^5.0.0",
-    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-import": "~2.9.0",
     "eslint-plugin-react": "github:ThiefMaster/eslint-plugin-react#jsx-props",
     "exports-loader": "^0.7.0",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
