--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "redux-thunk": "^2.2.0",
     "rrule": "^2.2.0",
     "selectize": "^0.12.4",
+    "semantic-ui-css": "^2.3.1",
+    "semantic-ui-react": "^0.79.1",
     "tablesorter": "^2.30.1",
     "taggle": "^1.12.0",
     "underscore": "^1.8.3",
