--- a/package.json
+++ b/package.json
@@ -78,8 +78,9 @@
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-cli": "^1.1.1",
+    "eslint-import-resolver-indico": "file:resolver",
     "eslint-plugin-babel": "^5.0.0",
-    "eslint-plugin-import": "~2.9.0",
+    "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-react": "github:ThiefMaster/eslint-plugin-react#jsx-props",
     "exports-loader": "^0.7.0",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
