--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "rc-calendar": "^9.6.0",
     "rc-time-picker": "^3.3.1",
     "react": "^16.3.1",
+    "react-debounce-input": "^3.2.0",
     "react-dom": "^16.3.1",
     "react-jsx-i18n": ">=0.0.3",
     "react-leaflet": "^1.9.1",
