--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "postcss-scss": "^1.0.5",
     "qs": "^6.5.1",
     "qtip2": "^3.0.3",
+    "rc-calendar": "^9.6.0",
+    "rc-time-picker": "^3.3.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-jsx-i18n": ">=0.0.3",
